WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274634
[UnifiedPDF] Clicking on choice annotations can result in flickering of the corresponding HTML element
https://bugs.webkit.org/show_bug.cgi?id=274634
Summary
[UnifiedPDF] Clicking on choice annotations can result in flickering of the c...
Sammy Gill
Reported
2024-05-23 21:38:49 PDT
Clicking on a choice annotation will open a select HTML element that corresponds to the annotation. Sometimes if you click on the choice annotation again while the HTML element is already up it will quickly disappear and reappear resulting in a flicker
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-05-23 21:39:24 PDT
rdar://128406464
Sammy Gill
Comment 2
2024-05-23 21:54:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29038
EWS
Comment 3
2024-05-28 08:34:35 PDT
Committed
279381@main
(b7d0e2efd379): <
https://commits.webkit.org/279381@main
> Reviewed commits have been landed. Closing PR #29038 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug